# xidle

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  xidle.c
